# qa_automation_course

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
homework_00/: README.md
homework_01/: README.md
homework_02/: Dockerfile  README.md  pytest.ini
homework_02/src/: Circle.py  Triangle.py
homework_02/tests/: FakeFigure.py  test_circle.py  test_rectangle.py  test_square.py
homework_03/: Dockerfile  README.md  result.json
homework_03/app/: helpers.py
homework_03/data/: users.json
homework_04/: Dockerfile  README.md  conftest.py
homework_04/Dog_api/: conftest.py
homework_04/Jsonplaceholder/: jsonplaceholder_validators.py
homework_04/Open_brewery_db/: open_brewery_validators.py  test_open_brewery_db.py
homework_05/: Dockerfile  README.md  conftest.py
homework_06/: Dockerfile  README.md
homework_07/: Dockerfile  README.md  conftest.py
homework_08/: Dockerfile  README.md
homework_09/: README.md
homework_1/: README.md
homework_10/: README.md
homework_2/: README.md  conftest.py
homework_3/: README.md  helpers.py  main.py  result.json  settings.py
homework_4/: README.md  conftest.py  test_validation_status_code.py
homework_5/: README.md  conftest.py
homework_6/: README.md  conftest.py
homework_7/: README.md  conftest.py  pytest.ini
homework_8/: README.md
homework_9/: README.md
src/: Circle.py  Figure.py  Rectangle.py  Square.py  Triangle.py
tests/: FakeFigure.py  test_circle.py  test_rectangle.py  test_square.py  test_triangle.py
(+89 files in other folders)
