[tool.poetry]
name = "otus | python qa engineer"
version = "1.3.0"
description = "Online course by Otus for python qa engineer"
authors = ["kazila <mrkazzila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.1.2"
requests = "2.27.1"
pydantic = "1.9.0"
selenium = "4.1.3"
allure-pytest = "2.9.45"
pytest-xdist = "2.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.1.20"
flake8-commas = "^2.1.0"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
